--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=foodiesapi
 #momgodb configuration for database
-spring.data.mongodb.uri= ${MONGODB_UR}
+spring.data.mongodb.uri= ${MONGODB_URL}
 #aws  s3 configuration
 aws.access.key=${AWS_ACCESS_KEY}
 aws.secret.key=${AWS_SECRET_KEY}
